platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_4.platter
# flag of a = (x + 1) > "Hello"; not invalid syntactically in after 1st defense cfg
# start() {}